# EWN_Neural_UCT

./: .gitignore  Board.h  CEinstein.cpp  CEinstein.h  CFakeBoard.h  CMakeLists.txt  ClientSocket.cpp  ClientSocket.h  Define.h  Einstein.cpp  Einstein.h  LICENSE  README.md  main.cpp
